solved pullup issue

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <span class="open left"><a href="#panel-left">&#61641;</a></span>
         <span class="title">TheLacunaBlog</span>
         <span class="open right"><a href="#panel-right">&#9776;</a></span>
-    </div><div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
+    </div><div class="panel right" data-role="panel" data-position="right" data-display="push" id="panel-right">
 
       <ul>
         <li class="how-tos"><a href="javascript:window.location.href='category.html?cat=how-tos'" title="How Tos" data-rel="close">How Tos</a></li>
