--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
 
         <script src="pull.js" type="text/javascript"></script>
         <script type="text/javascript">  app.initialize();
-        $(window).bind('beforeunload', function(){
-          app.blog(--page);
-        });</script>
+        $( document ).on( "pageinit", "#home-page", function() {
+    $( document ).on( "swipeleft swiperight", "#home-page", function( e ) {
+        // We check if there is no open panel on the page because otherwise
+        // a swipe to close the left panel would also open the right panel (and v.v.).
+        // We do this by checking the data that the framework stores on the page element (panel: open).
+        if ( $.mobile.activePage.jqmData( "panel" ) !== "open" ) {
+            if ( e.type === "swipeleft"  ) {
+                $( "#panel-right" ).panel( "open" );
+            } else if ( e.type === "swiperight" ) {
+                $( "#panel-left" ).panel( "open" );
+            }
+        }
+    });
+});
+        </script>
 
 
         <title>Home</title>
