--- a/single.html
+++ b/single.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" href="css/jquery.mobile.iscrollview.css" />
   <link rel="stylesheet" href="css/jquery.mobile.iscrollview-pull.css" />
-  <script type="text/javascript" src="cordova-2.7.0.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/libs/handlebars.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+        
+  <script type="text/javascript" src="js/SocialSharing.js"></script>
 
   <script src="js/iscroll.js" type="text/javascript"></script>
 
@@ -25,7 +27,7 @@
          -->
 
         <script src="pull.js" type="text/javascript"></script>
-        <script type="text/javascript">  app.initialize();
+        <script type="text/javascript">  
        </script>
 
         <title>Single Post</title>
@@ -136,6 +138,7 @@
        // function 
         //var myParam = location.search.split('?=')[1]
             app.single();
+         
         </script>
     </body>
 </html>
