--- a/single.html
+++ b/single.html
@@ -102,7 +102,7 @@
                 </div>
             
                   <div data-role="popup" id="popupComment" class="ui-content">
-<form action="" onsubmit=" $('#single-post-page').empty();app.commentSubmit(document.getElementById('name').value, document.getElementById('email').value, document.getElementById('comment').value, {{{id}}});$('#popupComment').popup('close');">
+<form action="" onsubmit="app.commentSubmit(document.getElementById('name').value, document.getElementById('email').value, document.getElementById('comment').value, {{{id}}});$('#popupComment').popup('close');$('#single-post-page').empty();">
                      <label>Name: </label>
           <input type = "text" id = "name" value = "" pattern=".{3,}" required title="3 characters minimum" size="3"/>
                 <label>Email: </label>
