testing new layouts for listview

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                   <li><a data-transition="slide" href="single.html?{{@index}}">
                       <h3><font style="white-space:normal;">{{{this.title}}}</font></h3>
                       <span class="ui-li-count">{{comments.length}}</span>
-                      <p><strong>By: </strong> {{{author.name}}} <strong> On: </strong> {{{date}}}</p>
+                      <p> [<font style="font-size:small">{{categories.0.title}}</font>] -- <strong>By: </strong> {{{author.name}}} <strong> On: </strong> {{{date}}} </p>
 <!--                      <p><font style="white-space:normal;">{excerpt}</font></p>-->
-				<p class="ui-li-aside">{{categories.0.title}}</p>
+				<p class="ui-li-aside"></p>
 			</a></li>
 
 <!--
