testing layout for listview 2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <li><a data-transition="slide" href="single.html?{{@index}}">
                       <h3><font style="white-space:normal;">{{{this.title}}}</font></h3>
                       <span class="ui-li-count">{{comments.length}}</span>
-                      <p> [<font style="font-size:small">{{categories.0.title}}</font>] -- <strong>By: </strong> {{{author.name}}} <strong> On: </strong> {{{date}}} </p>
+                      <p> <!--[<font style="font-size:small">{{categories.0.title}}</font>] ----> <strong>By: </strong> {{{author.name}}} <strong> On: </strong> {{{date}}} </p>
 <!--                      <p><font style="white-space:normal;">{excerpt}</font></p>-->
 				<p class="ui-li-aside"></p>
 			</a></li>
