font fix + removed swipe

--- a/single.html
+++ b/single.html
@@ -68,7 +68,7 @@
          </div>
             
         <div data-role="popup" id="popupComment" class="ui-content" data-theme="a">
-<form action="" onsubmit="loading();app.commentSubmit(document.getElementById('name').value, document.getElementById('email').value, document.getElementById('comment').value, {{{id}}});">
+<form action="" onsubmit="loading();app.commentSubmit(document.getElementById('name').value, document.getElementById('email').value, document.getElementById('comment').value, {{{id}}});" target="_blank">
                      <label>Name: </label>
           <input type = "text" id = "name" value = "" pattern=".{3,}" required title="3 characters minimum" size="3"/>
                 <label>Email: </label>
