--- a/catsingle.html
+++ b/catsingle.html
@@ -59,7 +59,7 @@
             {{{content}}}
             {{share title url}}
             <div data-role="collapsible" data-mini="true" data-collapsed-icon="arrow-r" data-expanded-icon="arrow-d" data-theme="a" data-content-theme="a">
-                    <h3>View {{comments.length}} Comments</h3>
+                    <h3>{{comments.length}} Comments</h3>
             {{#each comments}}
             <h3>{{{name}}}</h3>{{date}}
             <p>{{{content}}}</p>
@@ -93,7 +93,7 @@
 		
 		</ul>
 	</div> </div>
-
+    </div>
   <script type="text/javascript">
   app.catsingle();
        $('form').on('submit',function(e) {
