--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" /> 
   <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" id="viewport" content="width=device-width, height=device-height,initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi;" /> 
+        <meta name="viewport"  id="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height;" /> 
         
   <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -26,9 +26,10 @@
   <script src="pull.js" type="text/javascript"></script>
   <script src="js/custom.js" type="text/javascript"></script>
 <script type="text/javascript">$(document).ready(function() {
-    app.initialize();
+    
     loading();
     });
+    app.initialize();
     app.blog(1);
 
  
