--- a/single.html
+++ b/single.html
@@ -49,7 +49,7 @@
             <li class="miscellaneous"><a href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close">Miscellaneous</a></li>
           </ul>
         </div>
-    <div id="blog-content" data-role="content">
+    <div id="blog-content" data-role="content" data-iscroll>
         <div id="single-data"></div>
 
         <script id="single-template" type="text/x-handlebars-template">
