minor changes : scrolling, fixed li in index

--- a/authors.html
+++ b/authors.html
@@ -71,12 +71,12 @@
     
     </div>
     <div class="footer" data-id="footer" data-position="fixed" data-role="footer" data-tap-toggle="false" data-transition="none">
-        <div data-role="navbar">
+       <!-- <div data-role="navbar">
 <ul>
     <li><a href="javascript:prevauth()" data-icon="arrow-l"></a></li>
     <li><a href="javascript:nextauth()" data-icon="arrow-r"></a></li>
     </ul>
-	</div></div>
+	</div>--></div>
   </div>
     <script>app.authors();
         </script>
