--- a/single.html
+++ b/single.html
@@ -7,6 +7,7 @@
         
   <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
+    
   <link rel="stylesheet" type="text/css" href="css/style.css" />
      <link rel="stylesheet" type="text/css" href="css/jquery.mobile.pagination.css" />    
   <link rel="stylesheet" href="css/jquery.mobile.iscrollview.css" />
@@ -20,7 +21,7 @@
   <script src="js/iscroll.js" type="text/javascript"></script>
   <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
-
+        <style type="text/css"> </style>
         <title>Single Post</title>
     </head>
     <body>
