navbar no more fixed

--- a/category.html
+++ b/category.html
@@ -90,15 +90,14 @@
         </div>
     
     </div>
-    <div class="footer" data-id="footer" data-position="fixed" data-role="footer" data-tap-toggle="false" data-transition="none">
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown">
         <div data-role="navbar">
 <ul>
     <li><a href="javascript:prevcat()" data-icon="arrow-l"></a></li>
     <li><a href="javascript:nextcat()" data-icon="arrow-r"></a></li>
     </ul>
 	</div></div>
-  </div><script>
-        </script>
+  </div>
 
     </body>
     </html>
