--- a/catsingle.html
+++ b/catsingle.html
@@ -85,7 +85,7 @@
       </script>
 
     </div>
- <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="true" data-transition="slide">
+ <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
 			<li><a href="javascript:share()" data-transition="slidedown" >Share</a></li>
