--- a/single.html
+++ b/single.html
@@ -84,7 +84,7 @@
 
 </div>
         
-    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="true" >
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false"  data-transition="slidedown">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
 			<li><a href="javascript:share()" data-transition="slidedown">Share</a></li>
