--- a/single.html
+++ b/single.html
@@ -21,10 +21,7 @@
   <script src="js/iscroll.js" type="text/javascript"></script>
   <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
-        <script>$("a").click(function(e){
-                e.preventDefault();
-                window.open($(e.currentTarget).attr('href'), '_system', '');
-            });
+        <script>
         </script>
         <style type="text/css"> </style>
         <title>Single Post</title>
@@ -102,6 +99,11 @@
             app.single();
             $('form').on('submit',function(e) {
       e.preventDefault();  });
+            
+            $('a').click(function(e){
+                e.preventDefault();
+                window.open($(e.currentTarget).attr('href'), '_system', '');
+            });
         </script>
           </div>
     </body>
