external link fix

--- a/single.html
+++ b/single.html
@@ -131,7 +131,7 @@
      // console.log($(e.currentTarget).attr('share'));
     // alert($(e.currentTarget).attr('href'));
     //  alert($(e.hasAttr('share')));
-   if ($(e.currentTarget).attr('href') == '#panel-left' || $(e.currentTarget).attr('href') == '#panel-right' || $(e.currentTarget).attr('href') == '#popupComment' || $(e.currentTarget).attr('share') == 'share'){
+   if ($(e.currentTarget).attr('href') == '#panel-left' || $(e.currentTarget).attr('href') == '#panel-right' || $(e.currentTarget).attr('href') == '#popupComment' || $(e.currentTarget).attr('share') == 'share' || $(e.currentTarget).attr('href') == '#') {
     //window.open($(e.currentTarget).attr('href'), '_self', '');
    }else{
     e.preventDefault();
