--- a/catsingle.html
+++ b/catsingle.html
@@ -98,8 +98,14 @@
   app.catsingle();
        $('form').on('submit',function(e) {
       e.preventDefault();
-      
 });
+       $('a').click(function(e){
+         if (!($(e.currentTarget).attr('href') == '#panel-left' || $(e.currentTarget).attr('href') == '#panel-right' || $(e.currentTarget).attr('href') == '#popupComment' || $(e.currentTarget).attr('share') == 'share' || $(e.currentTarget).attr('href') == '#')) {
+    e.preventDefault();
+       console.log("second");
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+           });
 </script>
       </div>
 </body>
