open in system browser complete

--- a/catsingle.html
+++ b/catsingle.html
@@ -88,7 +88,7 @@
  <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
-			<li><a href="javascript:share()" data-transition="slidedown" >Share</a></li>
+			<li><a href="javascript:share()" data-transition="slidedown" share="share">Share</a></li>
 			<li><a href="#popupComment" data-rel="popup" data-position-to="window" data-transition="slidedown">Comment</a></li>
 		
 		</ul>
