--- a/single.html
+++ b/single.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8" /> 
     <meta name="format-detection" content="telephone=no" />
-     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+     <meta name="viewport"  id="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height;" />
         
   <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -21,9 +21,6 @@
   <script src="js/iscroll.js" type="text/javascript"></script>
   <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
-        <script>
-        </script>
-        <style type="text/css"> </style>
         <title>Single Post</title>
     </head>
     <body>
