--- a/category.html
+++ b/category.html
@@ -48,11 +48,11 @@
   <div class="hwrapper" data-role="page" id="category-page">
     <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
     <ul>
-      <li class="home"><a href="javascript:window.location.href='index.html'" title="Home" data-rel="close">Home</a></li>
-      <li class="blog"><a href="#" title="Blog" data-rel="close" >Pages</a></li>
-      <li class="mywork"><a href="#" title="My Work" data-rel="close">About Us</a></li>
-      <li class="contact"><a href="#" title="Contact" data-rel="close">Contact</a></li>
-      <li class="report"><a href="#" title="Report" data-rel="close">Report Bug</a></li>
+      <li class="home"><a href="javascript:window.location.href='index.html'" title="Home" data-rel="close" in-app="true">Home</a></li>
+      <li class="blog"><a href="#" title="Blog" data-rel="close" in-app="true">Pages</a></li>
+      <li class="mywork"><a href="#" title="My Work" data-rel="close" in-app="true">About Us</a></li>
+      <li class="contact"><a href="#" title="Contact" data-rel="close" in-app="true">Contact</a></li>
+      <li class="report"><a href="#" title="Report" data-rel="close" in-app="true">Report Bug</a></li>
     </ul>
   </div>
   <div class="header" data-role="header">
@@ -64,11 +64,11 @@
     <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
 
       <ul>
-        <li class="how-tos"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=how-tos'" title="How Tos" data-rel="close">How Tos</a></li>
-        <li class="freebies"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=freebies'" title="Freebies" data-rel="close" >Freebies</a></li>
-        <li class="useful-tools"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=useful-tools'" title="Useful Tools" data-rel="close">Useful Tools</a></li>
-        <li class="blogging"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=blogging'" title="Blogging" data-rel="close">Blogging</a></li>
-        <li class="miscellaneous"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close">Miscellaneous</a></li>
+        <li class="how-tos"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=how-tos'" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
+        <li class="freebies"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=freebies'" title="Freebies" data-rel="close" in-app="true">Freebies</a></li>
+        <li class="useful-tools"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=useful-tools'" title="Useful Tools" data-rel="close" in-app="true">Useful Tools</a></li>
+        <li class="blogging"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=blogging'" title="Blogging" data-rel="close" in-app="true">Blogging</a></li>
+        <li class="miscellaneous"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close" in-app="true">Miscellaneous</a></li>
       </ul>
     </div>
     <div data-iscroll="" id="blog-content" data-role="content" >
@@ -78,7 +78,7 @@
       <div id="blog-data">  <ul data-role="listview" data-inset="true" id="categoryposts" > </ul>
       <script id="blog-template" type="text/x-handlebars-template">
           {{#each posts}}
-           <li><a data-transition="slidedown" href="catsingle.html?{{@index}}">
+           <li><a data-transition="slidedown" href="catsingle.html?{{@index}}" in-app="true">
                       <h3>{{{this.title}}}</h3>
                       <span class="ui-li-count">{{comments.length}}</span> 
                       <p style="white-space:normal">  Author: {{{author.name}}}</p>
@@ -93,8 +93,8 @@
     <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown">
         <div data-role="navbar">
 <ul>
-    <li><a href="javascript:prevcat()" data-icon="arrow-l"></a></li>
-    <li><a href="javascript:nextcat()" data-icon="arrow-r"></a></li>
+    <li><a href="javascript:prevcat()" data-icon="arrow-l" in-app="true"></a></li>
+    <li><a href="javascript:nextcat()" data-icon="arrow-r" in-app="true"></a></li>
     </ul>
 	</div></div>
   </div>
