--- a/catsingle.html
+++ b/catsingle.html
@@ -26,8 +26,8 @@
 <body>
   <div class="hwrapper" id="single-post-page" data-role="page">
     <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
-      <ul>
-        <li class="home"><a href="javascript:window.location.href='index.html'" title="Home" data-rel="close" in-app="true">Home</a></li>
+      <ul><!--javascript:window.location.href='index.html'-->
+        <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>
         <li class="blog"><a href="#" title="Blog" data-rel="close" in-app="true">Pages</a></li>
         <li class="mywork"><a href="#" title="My Work" data-rel="close" in-app="true">About Us</a></li>
         <li class="contact"><a href="#" title="Contact" data-rel="close" in-app="true">Contact</a></li>
