--- a/catsingle.html
+++ b/catsingle.html
@@ -22,12 +22,12 @@
         <script src="js/custom.js" type="text/javascript"></script>
 
   <title>Single Post</title>
-</head>
+</head><!--javascript:window.location.href='index.html'-->
 <body>
   <div class="hwrapper" id="single-post-page" data-role="page">
     <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
-      <ul><!--javascript:window.location.href='index.html'-->
-        <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>
+      <ul>
+        <li class="home"><a href="javascript:window.location.href='index.html'" title="Home" data-rel="close" in-app="true">Home</a></li>
         <li class="blog"><a href="#" title="Blog" data-rel="close" in-app="true">Pages</a></li>
         <li class="mywork"><a href="#" title="My Work" data-rel="close" in-app="true">About Us</a></li>
         <li class="contact"><a href="#" title="Contact" data-rel="close" in-app="true">Contact</a></li>
@@ -102,10 +102,12 @@
        $('a').click(function(e){
          if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
     e.preventDefault();
-       console.log("second");
     window.open($(e.currentTarget).attr('href'), '_system', '');
    }
            });
+      $("#panel-left").on("click", function () {
+   $("#panel-left").panel("close");
+  }); 
 </script>
       </div>
 </body>
