--- a/single.html
+++ b/single.html
@@ -27,15 +27,22 @@
       <div class="hwrapper" id="single-post-page" data-role="page" >
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
           <ul>
-            <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>
-            <li class="blog"><a href="blog.html" title="Blog" data-rel="close" in-app="true" >Blog</a></li>
-            <li class="mywork"><a href="portfolio.html" title="My Work" data-rel="close" in-app="true">My Work</a></li>
-            <li class="contact"><a href="contact.html" title="Contact" data-rel="close" in-app="true">Contact</a></li>
-            <li class="report"><a href="#" title="Report" data-rel="close" in-app="true">Report Bug</a></li>
+            <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>     <li class="authors"><a href="javascript:window.location.href='authors.html'" title="Authors" data-rel="close" in-app="true">Authors</a></li>
+          <li class="aboutus"><a href="#" title="About Us" data-rel="close" in-app="true">About Us</a></li>
+          <li class="contact"><a href="#" title="Contact" data-rel="close" in-app="true">Contact</a></li>
+            <li class="search"><a href="#popupSearch" data-rel="popup" data-position-to="origin" data-transition="pop" title="Search" in-app="true">Search</a></li>
+            
+            <div data-role="popup" id="popupSearch" class="ui-content" data-theme="a" >
+<form action="" onsubmit="javascript:window.location.href='searchresults.html?search='+document.getElementById('search').value;" target="_blank">
+<input type="search" name="search" id="search" value="" data-mini="true" placeholder="Search for..."/>
+     <button data-theme="a" data-mini="true" type="submit" style="width:90px; margin-left:auto;margin-right:auto;display:block;margin-top:10%;margin-bottom:0%" onclick="">Search</button>
+    
+</form>
+</div>
           </ul>
         </div>
         <div class="header" data-role="header">
-          <span class="open left"><a href="#panel-left">&#61641;</a></span>
+          <span class="open left"><a href="#panel-left">&#xe809;</a></span>
           <span class="title">TheLacunaBlog</span>
           <span class="open right"><a href="#panel-right">&#9776;</a></span>
         </div><!-- /#header -->
@@ -86,7 +93,7 @@
     <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false"  data-transition="slidedown">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
-			<li><a href="javascript:share()" data-transition="pop" in-app="true">Share</a></li>
+			<li><a href="javascript:share()" data-transition="pop" in-app="true"><i class="fa fa-share-alt-square"></i>Share</a></li>
 			<li><a href="#popupComment" data-rel="popup" data-position-to="window" data-transition="pop" in-app="true">Comment</a></li>
 		
 		</ul>
