right panel glyph and fixed footer

--- a/authorposts.html
+++ b/authorposts.html
@@ -65,7 +65,7 @@
   <div class="header" data-role="header">
     <span class="open left"><a href="#panel-left">&#xe809;</a></span>
     <span class="title">TheLacunaBlog</span>
-  <span class="open right"><a href="#panel-right">&#9776;</a></span>
+  <span class="open right"><a href="#panel-right">&#xe805;</a></span>
 </div>
    
     <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
@@ -95,7 +95,7 @@
         </div>
     
     </div>
-    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown">
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown" data-position="fixed">
         <div data-role="navbar">
 <ul>
     <li><a href="javascript:prevcat()" data-icon="arrow-l" in-app="true"></a></li>
