--- a/authors.html
+++ b/authors.html
@@ -46,7 +46,7 @@
   <div class="header" data-role="header">
     <span class="open left"><a href="#panel-left">&#xe809;</a></span>
     <span class="title">TheLacunaBlog</span>
-  <span class="open right"><a href="#panel-right">&#9776;</a></span>
+  <span class="open right"><a href="#panel-right">&#xe805;</a></span>
 </div>
    
     <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
@@ -78,8 +78,8 @@
         
     
     </div>
-    <div class="footer" data-id="footer" data-position="fixed" data-role="footer" data-tap-toggle="false" data-transition="none">
-       <!-- <div data-role="navbar">
+    <div class="footer" data-id="footer" data-position="fixed" data-role="footer" data-tap-toggle="false" data-transition="none" data-position="fixed">
+       <!-- <div data-role="navbar"> 
 <ul>
     <li><a href="javascript:prevauth()" data-icon="arrow-l"></a></li>
     <li><a href="javascript:nextauth()" data-icon="arrow-r"></a></li>
