--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@
         <div class="header" data-role="header">
           <span class="open left"><a href="#panel-left">&#xe809;</a></span>
           <span class="title">TheLacunaBlog</span>
-          <span class="open right"><a href="#panel-right">&#9776;</a></span>
+          <span class="open right"><a href="#panel-right">&#xe805;</a></span>
         </div><!-- /#header -->
         <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
 
@@ -90,7 +90,7 @@
 
 </div>
         
-    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false"  data-transition="slidedown">
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false"  data-transition="slidedown" data-position="fixed">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
 			<li><a href="javascript:share()" data-transition="pop" in-app="true"><i class="fa fa-share-alt-square"></i>Share</a></li>
