--- a/single.html
+++ b/single.html
@@ -90,7 +90,7 @@
 
 </div>
         
-    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false"  data-transition="slidedown" data-position="fixed">
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false">
         <div data-role="navbar" data-theme="b" data-content-theme="b">
 		<ul>
 			<li><a href="javascript:share()" data-transition="pop" in-app="true"><i class="fa fa-share-alt-square"></i>Share</a></li>
