--- a/category.html
+++ b/category.html
@@ -101,7 +101,7 @@
         </div>
     
     </div>
-    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false" data-transition="slidedown" data-position="fixed">
+    <div class="footer" data-id="footer" data-role="footer" data-tap-toggle="false">
         <div data-role="navbar">
 <ul>
     <li><a href="javascript:prev('category', urlParams['cat'])" data-icon="arrow-l" in-app="true"></a></li>
