--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html>
 <head>      <meta charset="utf-8" />
   <meta name="format-detection" content="telephone=no" />
-     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no; target-densityDpi=device-dpi" />
+     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no" />
         
   <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -59,7 +59,7 @@
         <li class="miscellaneous"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close">Miscellaneous</a></li>
       </ul>
     </div>
-    <div id="author-content" data-role="content"  >
+    <div id="author-content" data-role="content"  class="blog">
       
     <div id="author-data" data-iscroll class="wrapper"> </div>
       <script id="author-template" type="text/x-handlebars-template">
