--- a/category.html
+++ b/category.html
@@ -81,7 +81,7 @@
         <li class="miscellaneous"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close" in-app="true">Miscellaneous</a></li>
       </ul>
     </div>
-    <div id="blog-content" data-role="content" >
+    <div id="blog-content" data-role="content" class="blog">
       
       <div id="blog-data" data-iscroll="" class="wrapper">
           <div class="iscroll-pulldown">
