--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
   <script src="js/iscroll.js" type="text/javascript"></script>
   <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
   
-  <script src="pull.js" type="text/javascript"></script>
-<script>
- 
-</script>
+  <script src="pull.js" type="text/javascript"></script> 
+
 
  
         <title>Home</title>
@@ -75,7 +73,7 @@
     </div>
 <!--        -->
  
-  <div id="blog-content" data-role="content" >
+  <div id="blog-content" data-role="content" class="blog">
     
     
    <div id="blog-data" data-iscroll class="wrapper">
