--- a/searchresults.html
+++ b/searchresults.html
@@ -78,7 +78,7 @@
         <li class="miscellaneous"><a data-transition="slide" href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close" in-app="true">Miscellaneous</a></li>
       </ul>
     </div>
-    <div id="searchresults-content" data-role="content" >
+    <div id="searchresults-content" data-role="content" class="blog" >
       <div id="searchresults-data" data-iscroll="" class="wrapper">
       
       <script id="blog-template" type="text/x-handlebars-template">
