testing background fix

--- a/category.html
+++ b/category.html
@@ -113,6 +113,16 @@
   while (match = search.exec(query))
     urlParams[decode(match[1])] = decode(match[2]);
   })();
+              $('form').on('submit',function(e) {
+      e.preventDefault();  });
+              $('a').click(function(e){
+              var href = ["#panel-left", "#panel-right", "#"];
+        if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
+    e.preventDefault();
+       console.log("second");
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+});
 
    app.get("category", 1, urlParams["cat"]);
           $("#panel-left").on("click", function () {
