--- a/searchresults.html
+++ b/searchresults.html
@@ -114,6 +114,16 @@
           $("#panel-left").on("click", function () {
    $("#panel-left").panel("close");
   });   
+              $('form').on('submit',function(e) {
+      e.preventDefault();  });
+              $('a').click(function(e){
+              var href = ["#panel-left", "#panel-right", "#"];
+        if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
+    e.preventDefault();
+       console.log("second");
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+});
             </script>
   </div>
 
