--- a/authorposts.html
+++ b/authorposts.html
@@ -112,7 +112,16 @@
     urlParams[decode(match[1])] = decode(match[2]);
   })();
    app.get("author", 1, urlParams["authname"]);
-          
+              $('form').on('submit',function(e) {
+      e.preventDefault();  });
+              $('a').click(function(e){
+              var href = ["#panel-left", "#panel-right", "#"];
+        if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
+    e.preventDefault();
+       console.log("second");
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+});
           $("#panel-left").on("click", function () {
    $("#panel-left").panel("close");
   });   
