--- a/authors.html
+++ b/authors.html
@@ -100,7 +100,14 @@
         loading();
      });
         app.authors();
-
+  $('a').click(function(e){
+              var href = ["#panel-left", "#panel-right", "#"];
+        if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
+    e.preventDefault();
+       console.log("second");
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+});
       $("#panel-left").on("click", function () {
    $("#panel-left").panel("close");
   });   
