--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
         <ul>
           <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>
-          <li class="authors"><a href="javascript:window.location.href='authors.html'" title="Authors" data-rel="close" in-app="true">Authors</a></li>
-          <li class="aboutus"><a href="javascript:window.location.href='page.html?page=about-us'" title="About Us" data-rel="close" in-app="true">About Us</a></li>
-<li class="contact"><a href="#popupContact" title="Contact" data-rel="popup" data-position-to="window" in-app="true">Contact</a></li>
+          <li class="authors"><a href="navigator.app.loadUrl(file:///android_asset/authors.html);" title="Authors" data-rel="close" in-app="true">Authors</a></li>
+          <li class="aboutus"><a href="javascript:window.location.href='page.html?page=about-us'" title="About Us" data-rel="close" in-app="true" data-transition="none">About Us</a></li>
+<li class="contact"><a href="javascript:window.location.href='single.html?#popupContact'" title="Contact" data-rel="popup" data-position-to="window" in-app="true" rel="external">Contact</a></li>
 <div data-role="popup" id="popupContact" class="ui-content" data-theme="a" >
                 <strong> The Lacuna Blog </strong>
                 <ul>
@@ -115,7 +115,13 @@
 	   </div> 
     </div>  
          <script type="text/javascript">
-             
+               $('a').click(function(e){
+              var href = ["#panel-left", "#panel-right", "#"];
+        if (!( $.inArray($(e.currentTarget).attr('href'), href) != -1  || $(e.currentTarget).attr('in-app') == 'true')) {
+    e.preventDefault();
+    window.open($(e.currentTarget).attr('href'), '_system', '');
+   }
+});
     app.initialize();
               page=1;
              $(document).ready(function() {
