--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="home"><a href="#" onclick="$.mobile.changePage('index.html')" title="Home" data-rel="close" in-app="true">Home</a></li>
           <li class="authors"><a href="file:///android_asset/www/authors.html" title="Authors" data-rel="close" in-app="true">Authors</a></li>
           <li class="aboutus"><a href="#" onclick="file:///android_asset/www/page.html?page=about-us" rel="external" title="About Us" data-rel="close" in-app="true" data-transition="none">About Us</a></li>
-<li class="contact"><a href="$.mobile.changePage('single.html?#popupContact')" title="Contact" data-rel="popup" data-position-to="window" in-app="true" rel="external">Contact</a></li>
+<li class="contact"><a href="#" onclick="$.mobile.changePage('single.html')" title="Contact" data-rel="popup" data-position-to="window" in-app="true" rel="external">Contact</a></li>
 <div data-role="popup" id="popupContact" class="ui-content" data-theme="a" >
                 <strong> The Lacuna Blog </strong>
                 <ul>
