--- a/category.html
+++ b/category.html
@@ -12,10 +12,11 @@
   <link rel="stylesheet" href="css/jquery.mobile.iscrollview-pull.css" />
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/libs/handlebars.js"></script>
-     <script src="js/custom.js" type="text/javascript"></script>   
-  <script type="text/javascript" src="js/index.js"></script>
+
   <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+         <script src="js/custom.js" type="text/javascript"></script>   
+  <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/SocialSharing.js"></script>
   <script src="js/iscroll.js" type="text/javascript"></script>
   <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
@@ -24,7 +25,7 @@
     
   <title>Category</title>
 </head>
-<body>
+<body onLoad="onLoad()">
   <div class="hwrapper" data-role="page" id="category-page">
     <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
     <ul>
