--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <!-- /#header -->
       <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
           <ul>
-        <li class="how-tos"><a href="javascript:window.location.href='category.html?cat=how-tos'" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
-        <li class="freebies"><a href="javascript:window.location.href='category.html?cat=freebies'" title="Freebies" data-rel="close" in-app="true">Freebies</a></li>
+        <li class="how-tos"><a href="category.html?cat=how-tos" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
+        <li class="freebies"><a href="category.html?cat=freebies" rel="external" title="Freebies" data-rel="close" in-app="true">Freebies</a></li>
         <li class="useful-tools"><a href="javascript:window.location.href='category.html?cat=useful-tools'" title="Useful Tools" data-rel="close" in-app="true">Useful Tools</a></li>
         <li class="blogging"><a href="javascript:window.location.href='category.html?cat=blogging'" title="Blogging" data-rel="close" in-app="true">Blogging</a></li>
         <li class="miscellaneous"><a href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close" in-app="true">Miscellaneous</a></li>
