--- a/single.html
+++ b/single.html
@@ -27,7 +27,7 @@
       <div class="hwrapper" id="single-post-page" data-role="page" >
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
           <ul>
-            <li class="home"><a href="index.html" title="Home" data-rel="close" in-app="true">Home</a></li>     <li class="authors"><a href="javascript:window.location.href='authors.html'" title="Authors" data-rel="close" in-app="true">Authors</a></li>
+            <li class="home"><a href="javascript:window.location.href='index.html'" title="Home" data-rel="close" in-app="true" data-transition="fade">Home</a></li>     <li class="authors"><a href="javascript:window.location.href='authors.html'" title="Authors" data-rel="close" in-app="true">Authors</a></li>
           <li class="aboutus"><a href="#" title="About Us" data-rel="close" in-app="true">About Us</a></li>
           <li class="contact"><a href="#" title="Contact" data-rel="close" in-app="true">Contact</a></li>
             <li class="search"><a href="#popupSearch" data-rel="popup" data-position-to="origin" data-transition="pop" title="Search" in-app="true">Search</a></li>
