--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="hwrapper" id="home-page" data-role="page">
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
         <ul>
-          <li class="home"><a href="#" onclick="$.mobile.changePage('index.html')" title="Home" data-rel="close" in-app="true" data-transition="slide">Home</a></li>
-          <li class="authors"><a href="authors.html" title="Authors" data-rel="close" in-app="true" data-transition="slide">Authors</a></li>
+          <li class="home"><a href="#" onclick="$.mobile.changePage('index.html')" title="Home" data-rel="close" in-app="true" data-transition="slide" class="ui-btn-active ui-state-persist">Home</a></li>
+          <li class="authors"><a href="authors.html" title="Authors" data-rel="close" in-app="true" data-transition="none">Authors</a></li>
           <li class="aboutus"><a href="#" onclick="window.location.href='page.html?page=about-us'" title="About Us" data-rel="close" in-app="true" data-transition="none">About Us</a></li>
 <li class="contact"><a href="javascript:window.location.href='single.html'" title="Contact" data-rel="popup" data-position-to="window" in-app="true" data-transition="none">Contact</a></li>
 <div data-role="popup" id="popupContact" class="ui-content" data-theme="a" >
@@ -78,8 +78,8 @@
       <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
           <ul>
         <li class="how-tos"><a href="category.html?cat=how-tos" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
-        <li class="freebies"><a href="category.html?cat=freebies" rel="external" title="Freebies" data-rel="close" in-app="true">Freebies</a></li>
-        <li class="useful-tools"><a href="javascript:window.location.href='category.html?cat=useful-tools'" title="Useful Tools" data-rel="close" in-app="true">Useful Tools</a></li>
+        <li class="freebies"><a href="category.html?cat=freebies" title="Freebies" data-rel="close" in-app="true">Freebies</a></li>
+        <li class="useful-tools"><a href="javascript:window.open(('category.html?cat=blogging'), '_self');" title="Useful Tools" data-rel="close" in-app="true">Useful Tools</a></li>
         <li class="blogging"><a href="javascript:window.location.href='category.html?cat=blogging'" title="Blogging" data-rel="close" in-app="true">Blogging</a></li>
         <li class="miscellaneous"><a href="javascript:window.location.href='category.html?cat=miscellaneous'" title="Miscellaneous" data-rel="close" in-app="true">Miscellaneous</a></li>
       </ul>
