--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="hwrapper" id="home-page" data-role="page">
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
         <ul>
-          <li class="home"><a href="#" onclick="$.mobile.changePage('index.html')" title="Home" data-rel="close" in-app="true" data-transition="slide" class="ui-btn-active ui-state-persist">Home</a></li>
-          <li class="authors"><a href="authors.html" title="Authors" data-rel="close" in-app="true" data-transition="none">Authors</a></li>
+          <li class="home"><a href="#" onclick="javascript:window.open(('index.html'), '_self');" title="Home" data-rel="close" in-app="true" data-transition="slide" class="ui-btn-active ui-state-persist">Home</a></li>
+          <li class="authors"><a href="javascript:window.open(('authors.html'), '_self');" title="Authors" data-rel="close" in-app="true" data-transition="none">Authors</a></li>
           <li class="aboutus"><a href="#" onclick="window.location.href='page.html?page=about-us'" title="About Us" data-rel="close" in-app="true" data-transition="none">About Us</a></li>
 <li class="contact"><a href="javascript:window.location.href='single.html'" title="Contact" data-rel="popup" data-position-to="window" in-app="true" data-transition="none">Contact</a></li>
 <div data-role="popup" id="popupContact" class="ui-content" data-theme="a" >
